--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-advanced-cropper": "^0.19.3",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "sass": "^1.69.4",
     "zustand": "^4.4.3"
   },
   "devDependencies": {
