--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-icons": "^4.11.0",
     "react-intersection-observer": "^9.5.2",
     "sass": "^1.69.4",
-    "swiper": "^10.3.1",
+    "swiper": "8.4.1",
     "zustand": "^4.4.3"
   },
   "devDependencies": {
