--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3001",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -21,6 +21,7 @@
     "react-advanced-cropper": "^0.19.3",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "react-input-emoji": "^5.6.5",
     "react-intersection-observer": "^9.5.2",
     "sass": "^1.69.4",
     "swiper": "8.4.1",
