feat : web 관련 화면 추가 및 login 기능 추가 23.11.03.  gun

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debounce": "^1.2.1",
     "framer-motion": "^10.16.4",
     "image-js": "^0.35.4",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.29.4",
     "next": "13.5.4",
     "raw-loader": "^4.0.2",
