--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,3 @@
 {
-  "rewrites": [
-    {
-      "source": "/:path*",
-      "destination": "http://151.145.38.133:8084/:path*",
-    }
-  ]
+  "routes": [{ "src": "/:path*", "dest": "http://151.145.38.133:8084/:path*", "status": 200 }]
 }
